добавил новый шрифт

--- a/css.css
+++ b/css.css
@@ -1,3 +1,10 @@
+html {
+	display: flex;
+	flex-direction: column;
+}
+
 body {
+	display: flex;
+	flex-direction: column;
 	background-color: pink;	
 }
